ran amplify add auth
edited lambda function...went kinda weird (no confirmation from the command prompt because it couldn't open VSCode)

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -1,1 +1,10 @@
-{}
+{
+  "auth": {},
+  "function": {
+    "ecommerceapp4508becePostConfirmation": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
+    }
+  }
+}
